change vars to prefix

--- a/azure_dbx_infra/env.tfvars.example
+++ b/azure_dbx_infra/env.tfvars.example
@@ -1,9 +1,9 @@
-resource_group_name="southcentral-rg"
-databricks_workspace_name="dev-southcentral-ws"
-managed_rg="dev-southcentral-mrg"
-ws_managed_storage_account_name="devmrgsa"
+#resource_group_name="southcentral-rg"
+#databricks_workspace_name="southcentral-ws"
+#managed_rg="southcentral-mrg"
+#ws_managed_storage_account_name="mrgsa"
 location="southcentralus"
-prefix="dev-tf-southcentralus"
+prefix="tobotf"
 cidr="10.0.0.0/20"
 
 #tags
