update example tf var changes and fix warnings in main.tf

--- a/azure_dbx_infra/env.tfvars.example
+++ b/azure_dbx_infra/env.tfvars.example
@@ -1,12 +1,12 @@
-#resource_group_name="southcentral-rg"
-#databricks_workspace_name="southcentral-ws"
-#managed_rg="southcentral-mrg"
-#ws_managed_storage_account_name="mrgsa"
+# Region you want your workspace and azure infrastructure to be provisioned in
 location="southcentralus"
-prefix="tobotf"
+
+# We will use this prefix to dynamically generate a unique name for every object created in azure. Do not add any special characters or spaces.
+prefix="usernametf"
+
 cidr="10.0.0.0/20"
 
 #tags
 email="username@domain.com"
-remove_date="2024-12-31"
+remove_date="2024-6-31"
 description="Demo-with-terraform"
