--- a/uc/env.tfvars.example
+++ b/uc/env.tfvars.example
@@ -1,3 +1,5 @@
-#Example databricks_resource_id = "/subscriptions/3f2e4d32-8e8d-46d6-82bc-fffffffff/resourceGroups/name-ff-rg/providers/Microsoft.Databricks/workspaces/name-ff-ffff-ws"
+#Example databricks resource id from the Azure Portal: "/subscriptions/3f2e4d32-8e8d-46d6-82bc-fffffffff/resourceGroups/name-ff-rg/providers/Microsoft.Databricks/workspaces/name-ff-ffff-ws"
 databricks_resource_id = ""
+
+#Set your metastore name here
 uc_metastore_name="username-region-metastore"
