update uc deployment options

--- a/uc-by-default/env.tfvars.example
+++ b/uc-by-default/env.tfvars.example
@@ -1,3 +1,6 @@
+#Account Console id
+account_console_id =""
+
 #Example databricks resource id from the Azure Portal: "/subscriptions/3f2e4d32-8e8d-46d6-82bc-fffffffff/resourceGroups/name-ff-rg/providers/Microsoft.Databricks/workspaces/name-ff-ffff-ws"
 databricks_resource_id = ""
 
